--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimplerNonSymInOutAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimplerNonSymInOutAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -2,26 +2,63 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
+        description: Admin Network Policy To Allow Egress Access To DNS Server
+        nsx-id: egress-dns-rule-id
+    creationTimestamp: null
+    name: egress-dns-policy
+    namespace: default
+spec:
+    egress:
+        - action: Allow
+          ports:
+            - portNumber:
+                port: 53
+                protocol: UDP
+          to:
+            - pods:
+                namespaceSelector: {}
+                podSelector:
+                    matchExpressions:
+                        - key: k8s-app
+                          operator: In
+                          values:
+                            - kube-dns
+    priority: 1
+    subject:
+        pods:
+            namespaceSelector: {}
+            podSelector: {}
+status:
+    conditions: null
+---
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
+metadata:
+    annotations:
         description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: All Connections)'
         nsx-id: "10218"
     creationTimestamp: null
-    name: admin-policy-0
+    name: admin-policy-1
     namespace: default
 spec:
     ingress:
         - action: Pass
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: group__Gryffindor
                           operator: Exists
           ports: null
-    priority: 1
+    priority: 2
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: group__Gryffindor
@@ -36,7 +73,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: TCP)'
         nsx-id: "10219"
     creationTimestamp: null
-    name: admin-policy-1
+    name: admin-policy-2
     namespace: default
 spec:
     egress:
@@ -48,15 +85,19 @@ spec:
                 start: 1
           to:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: group__Gryffindor
                           operator: Exists
-    priority: 2
+    priority: 3
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: group__Gryffindor
@@ -71,23 +112,27 @@ metadata:
         description: '(jump_to_application: (src: (group = Slytherin) dst: (group = Slytherin) conn: TCP,UDP)'
         nsx-id: "10220"
     creationTimestamp: null
-    name: admin-policy-2
+    name: admin-policy-3
     namespace: default
 spec:
     ingress:
         - action: Pass
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: group__Slytherin
                           operator: Exists
           ports: null
-    priority: 3
+    priority: 4
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: group__Slytherin
@@ -102,7 +147,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Slytherin) dst: (group = Slytherin) conn: UDP)'
         nsx-id: "10221"
     creationTimestamp: null
-    name: admin-policy-3
+    name: admin-policy-4
     namespace: default
 spec:
     egress:
@@ -114,15 +159,19 @@ spec:
                 start: 1
           to:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: group__Slytherin
                           operator: Exists
-    priority: 4
+    priority: 5
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: group__Slytherin
@@ -137,7 +186,7 @@ metadata:
         description: '(deny: (src: (*) dst: (*) conn: All Connections)'
         nsx-id: "10231"
     creationTimestamp: null
-    name: admin-policy-4
+    name: admin-policy-5
     namespace: default
 spec:
     egress:
@@ -145,12 +194,16 @@ spec:
           ports: null
           to:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector: {}
-    priority: 5
+    priority: 6
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector: {}
 status:
     conditions: null
@@ -162,20 +215,24 @@ metadata:
         description: '(deny: (src: (*) dst: (*) conn: All Connections)'
         nsx-id: "10231"
     creationTimestamp: null
-    name: admin-policy-5
+    name: admin-policy-6
     namespace: default
 spec:
     ingress:
         - action: Deny
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector: {}
           ports: null
-    priority: 6
+    priority: 7
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector: {}
 status:
     conditions: null
