default namespace on admin too

--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndCondsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndCondsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -26,7 +26,9 @@ spec:
     priority: 1
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector: {}
 status:
     conditions: null
