--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndCondsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndCondsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -3,10 +3,9 @@ kind: AdminNetworkPolicy
 metadata:
     annotations:
         description: Admin Network Policy To Allow Egress Access To DNS Server
-        nsx-id: egress-dns-rule-id
+        nsx-id: none
     creationTimestamp: null
     name: egress-dns-policy
-    namespace: default
 spec:
     egress:
         - action: Allow
@@ -41,7 +40,6 @@ metadata:
         nsx-id: "1925"
     creationTimestamp: null
     name: admin-policy-1
-    namespace: default
 spec:
     ingress:
         - action: Allow
@@ -75,7 +73,6 @@ metadata:
         nsx-id: "1926"
     creationTimestamp: null
     name: admin-policy-2
-    namespace: default
 spec:
     egress:
         - action: Allow
@@ -112,7 +109,6 @@ metadata:
         nsx-id: "1927"
     creationTimestamp: null
     name: admin-policy-3
-    namespace: default
 spec:
     ingress:
         - action: Allow
@@ -146,7 +142,6 @@ metadata:
         nsx-id: "1928"
     creationTimestamp: null
     name: admin-policy-4
-    namespace: default
 spec:
     egress:
         - action: Allow
@@ -180,7 +175,6 @@ metadata:
         nsx-id: "10300"
     creationTimestamp: null
     name: admin-policy-5
-    namespace: default
 spec:
     egress:
         - action: Deny
@@ -209,7 +203,6 @@ metadata:
         nsx-id: "10300"
     creationTimestamp: null
     name: admin-policy-6
-    namespace: default
 spec:
     ingress:
         - action: Deny
