--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimplerNonSymInOutAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimplerNonSymInOutAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -3,10 +3,9 @@ kind: AdminNetworkPolicy
 metadata:
     annotations:
         description: Admin Network Policy To Allow Egress Access To DNS Server
-        nsx-id: egress-dns-rule-id
+        nsx-id: none
     creationTimestamp: null
     name: egress-dns-policy
-    namespace: default
 spec:
     egress:
         - action: Allow
@@ -41,7 +40,6 @@ metadata:
         nsx-id: "10218"
     creationTimestamp: null
     name: admin-policy-1
-    namespace: default
 spec:
     ingress:
         - action: Pass
@@ -76,7 +74,6 @@ metadata:
         nsx-id: "10219"
     creationTimestamp: null
     name: admin-policy-2
-    namespace: default
 spec:
     egress:
         - action: Pass
@@ -115,7 +112,6 @@ metadata:
         nsx-id: "10220"
     creationTimestamp: null
     name: admin-policy-3
-    namespace: default
 spec:
     ingress:
         - action: Pass
@@ -150,7 +146,6 @@ metadata:
         nsx-id: "10221"
     creationTimestamp: null
     name: admin-policy-4
-    namespace: default
 spec:
     egress:
         - action: Pass
@@ -189,7 +184,6 @@ metadata:
         nsx-id: "10231"
     creationTimestamp: null
     name: admin-policy-5
-    namespace: default
 spec:
     egress:
         - action: Deny
@@ -218,7 +212,6 @@ metadata:
         nsx-id: "10231"
     creationTimestamp: null
     name: admin-policy-6
-    namespace: default
 spec:
     ingress:
         - action: Deny
