--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/policies.yaml
@@ -3,7 +3,7 @@ kind: NetworkPolicy
 metadata:
     annotations:
         description: Network Policy To Allow Access To DNS Server
-        nsx-id: dns-rule-id
+        nsx-id: none
     creationTimestamp: null
     name: dns-policy
     namespace: default
@@ -149,7 +149,7 @@ kind: NetworkPolicy
 metadata:
     annotations:
         description: Default Deny Network Policy
-        nsx-id: no-nsx-id
+        nsx-id: none
     creationTimestamp: null
     name: default-deny
     namespace: default
