--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts/policies.yaml
@@ -3,7 +3,7 @@ kind: NetworkPolicy
 metadata:
     annotations:
         description: Network Policy To Allow Access To DNS Server
-        nsx-id: dns-rule-id
+        nsx-id: none
     creationTimestamp: null
     name: dns-policy
     namespace: default
