creating dns admin policy (#262)

--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts/policies.yaml
@@ -2,10 +2,33 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: Network Policy To Allow Access To DNS Server
+        nsx-id: none
+    creationTimestamp: null
+    name: dns-policy
+    namespace: default
+spec:
+    egress:
+        - ports:
+            - port: 53
+              protocol: UDP
+          to:
+            - namespaceSelector: {}
+              podSelector:
+                matchLabels:
+                    k8s-app: kube-dns
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: TCP'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-0
+    name: policy-1
     namespace: default
 spec:
     egress:
@@ -32,7 +55,7 @@ metadata:
         description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-1
+    name: policy-2
     namespace: default
 spec:
     egress:
@@ -57,7 +80,7 @@ metadata:
         description: 'src: (group = Dumbledore) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-2
+    name: policy-3
     namespace: default
 spec:
     egress:
@@ -82,7 +105,7 @@ metadata:
         description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: TCP'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-3
+    name: policy-4
     namespace: default
 spec:
     ingress:
@@ -109,7 +132,7 @@ metadata:
         description: 'src: (group = Hufflepuff) dst: (group = Web and group = Hufflepuff) conn: UDP dst-ports: 300-320'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-4
+    name: policy-5
     namespace: default
 spec:
     ingress:
@@ -138,7 +161,7 @@ metadata:
         description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-5
+    name: policy-6
     namespace: default
 spec:
     ingress:
@@ -163,7 +186,7 @@ metadata:
         description: 'src: (group = Dumbledore) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-6
+    name: policy-7
     namespace: default
 spec:
     ingress:
@@ -188,7 +211,7 @@ metadata:
         description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: TCP'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-7
+    name: policy-8
     namespace: default
 spec:
     egress:
@@ -217,7 +240,7 @@ metadata:
         description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-8
+    name: policy-9
     namespace: default
 spec:
     egress:
@@ -244,7 +267,7 @@ metadata:
         description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: TCP'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-9
+    name: policy-10
     namespace: default
 spec:
     ingress:
@@ -273,7 +296,7 @@ metadata:
         description: 'src: (group = Web and group = Hufflepuff) dst: (group = App and group = Hufflepuff) conn: UDP dst-ports: 300-320'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-10
+    name: policy-11
     namespace: default
 spec:
     ingress:
@@ -304,7 +327,7 @@ metadata:
         description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-11
+    name: policy-12
     namespace: default
 spec:
     ingress:
@@ -331,7 +354,7 @@ metadata:
         description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: TCP'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-12
+    name: policy-13
     namespace: default
 spec:
     egress:
@@ -360,7 +383,7 @@ metadata:
         description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-13
+    name: policy-14
     namespace: default
 spec:
     egress:
@@ -387,7 +410,7 @@ metadata:
         description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: TCP'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-14
+    name: policy-15
     namespace: default
 spec:
     ingress:
@@ -416,7 +439,7 @@ metadata:
         description: 'src: (group = App and group = Hufflepuff) dst: (group = DB and group = Hufflepuff) conn: UDP dst-ports: 300-320'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-15
+    name: policy-16
     namespace: default
 spec:
     ingress:
@@ -447,7 +470,7 @@ metadata:
         description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-16
+    name: policy-17
     namespace: default
 spec:
     ingress:
@@ -466,29 +489,6 @@ spec:
               operator: Exists
     policyTypes:
         - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: Network Policy To Allow Access To DNS Server
-        nsx-id: dns-rule-id
-    creationTimestamp: null
-    name: dns-policy
-    namespace: default
-spec:
-    egress:
-        - ports:
-            - port: 53
-              protocol: UDP
-          to:
-            - namespaceSelector: {}
-              podSelector:
-                matchLabels:
-                    k8s-app: kube-dns
-    podSelector: {}
-    policyTypes:
-        - Egress
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
