--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrCondsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrCondsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -2,23 +2,60 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
+        description: Admin Network Policy To Allow Egress Access To DNS Server
+        nsx-id: none
+    creationTimestamp: null
+    name: egress-dns-policy
+spec:
+    egress:
+        - action: Allow
+          ports:
+            - portNumber:
+                port: 53
+                protocol: UDP
+          to:
+            - pods:
+                namespaceSelector: {}
+                podSelector:
+                    matchExpressions:
+                        - key: k8s-app
+                          operator: In
+                          values:
+                            - kube-dns
+    priority: 1
+    subject:
+        pods:
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
+            podSelector: {}
+status:
+    conditions: null
+---
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
+metadata:
+    annotations:
         description: '(allow: (src: (*) dst: (tag = Slytherin) conn: All Connections)'
         nsx-id: "1925"
     creationTimestamp: null
-    name: admin-policy-0
-    namespace: default
+    name: admin-policy-1
 spec:
     ingress:
         - action: Allow
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector: {}
           ports: null
-    priority: 1
+    priority: 2
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: tag__Slytherin
@@ -33,20 +70,23 @@ metadata:
         description: '(allow: (src: (*) dst: (tag != DB) conn: All Connections)'
         nsx-id: "1925"
     creationTimestamp: null
-    name: admin-policy-1
-    namespace: default
+    name: admin-policy-2
 spec:
     ingress:
         - action: Allow
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector: {}
           ports: null
-    priority: 2
+    priority: 3
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: tag__DB
@@ -61,23 +101,26 @@ metadata:
         description: '(allow: (src: (tag = Gryffindor) dst: (tag = Slytherin) conn: All Connections)'
         nsx-id: "1926"
     creationTimestamp: null
-    name: admin-policy-2
-    namespace: default
+    name: admin-policy-3
 spec:
     egress:
         - action: Allow
           ports: null
           to:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: tag__Slytherin
                           operator: Exists
-    priority: 3
+    priority: 4
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: tag__Gryffindor
@@ -92,23 +135,26 @@ metadata:
         description: '(allow: (src: (tag = Gryffindor) dst: (tag != DB) conn: All Connections)'
         nsx-id: "1926"
     creationTimestamp: null
-    name: admin-policy-3
-    namespace: default
+    name: admin-policy-4
 spec:
     egress:
         - action: Allow
           ports: null
           to:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: tag__DB
                           operator: DoesNotExist
-    priority: 4
+    priority: 5
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: tag__Gryffindor
@@ -123,20 +169,23 @@ metadata:
         description: '(allow: (src: (*) dst: (tag = Gryffindor) conn: All Connections)'
         nsx-id: "1927"
     creationTimestamp: null
-    name: admin-policy-4
-    namespace: default
+    name: admin-policy-5
 spec:
     ingress:
         - action: Allow
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector: {}
           ports: null
-    priority: 5
+    priority: 6
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: tag__Gryffindor
@@ -151,20 +200,23 @@ metadata:
         description: '(allow: (src: (*) dst: (tag != DB) conn: All Connections)'
         nsx-id: "1927"
     creationTimestamp: null
-    name: admin-policy-5
-    namespace: default
+    name: admin-policy-6
 spec:
     ingress:
         - action: Allow
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector: {}
           ports: null
-    priority: 6
+    priority: 7
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: tag__DB
@@ -179,23 +231,26 @@ metadata:
         description: '(allow: (src: (*) dst: (tag = Hufflepuff) conn: All Connections)'
         nsx-id: "1928"
     creationTimestamp: null
-    name: admin-policy-6
-    namespace: default
+    name: admin-policy-7
 spec:
     egress:
         - action: Allow
           ports: null
           to:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: tag__Hufflepuff
                           operator: Exists
-    priority: 7
+    priority: 8
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector: {}
 status:
     conditions: null
@@ -207,48 +262,26 @@ metadata:
         description: '(allow: (src: (*) dst: (tag != DB) conn: All Connections)'
         nsx-id: "1928"
     creationTimestamp: null
-    name: admin-policy-7
-    namespace: default
+    name: admin-policy-8
 spec:
     egress:
         - action: Allow
           ports: null
           to:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: tag__DB
                           operator: DoesNotExist
-    priority: 8
-    subject:
-        pods:
-            namespaceSelector: {}
-            podSelector: {}
-status:
-    conditions: null
----
-apiVersion: policy.networking.k8s.io/v1alpha1
-kind: AdminNetworkPolicy
-metadata:
-    annotations:
-        description: '(deny: (src: (*) dst: (*) conn: All Connections)'
-        nsx-id: "10300"
-    creationTimestamp: null
-    name: admin-policy-8
-    namespace: default
-spec:
-    egress:
-        - action: Deny
-          ports: null
-          to:
-            - pods:
-                namespaceSelector: {}
-                podSelector: {}
     priority: 9
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector: {}
 status:
     conditions: null
@@ -261,19 +294,50 @@ metadata:
         nsx-id: "10300"
     creationTimestamp: null
     name: admin-policy-9
-    namespace: default
+spec:
+    egress:
+        - action: Deny
+          ports: null
+          to:
+            - pods:
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
+                podSelector: {}
+    priority: 10
+    subject:
+        pods:
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
+            podSelector: {}
+status:
+    conditions: null
+---
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
+metadata:
+    annotations:
+        description: '(deny: (src: (*) dst: (*) conn: All Connections)'
+        nsx-id: "10300"
+    creationTimestamp: null
+    name: admin-policy-10
 spec:
     ingress:
         - action: Deny
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector: {}
           ports: null
-    priority: 10
+    priority: 11
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector: {}
 status:
     conditions: null
