--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -2,11 +2,44 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
+        description: Admin Network Policy To Allow Egress Access To DNS Server
+        nsx-id: none
+    creationTimestamp: null
+    name: egress-dns-policy
+spec:
+    egress:
+        - action: Allow
+          ports:
+            - portNumber:
+                port: 53
+                protocol: UDP
+          to:
+            - pods:
+                namespaceSelector: {}
+                podSelector:
+                    matchExpressions:
+                        - key: k8s-app
+                          operator: In
+                          values:
+                            - kube-dns
+    priority: 1
+    subject:
+        pods:
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
+            podSelector: {}
+status:
+    conditions: null
+---
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
+metadata:
+    annotations:
         description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: TCP)'
         nsx-id: "10218"
     creationTimestamp: null
-    name: admin-policy-0
-    namespace: default
+    name: admin-policy-1
 spec:
     egress:
         - action: Pass
@@ -17,15 +50,19 @@ spec:
                 start: 1
           to:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: group__Gryffindor
                           operator: Exists
-    priority: 1
+    priority: 2
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: group__Gryffindor
@@ -40,14 +77,15 @@ metadata:
         description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: TCP)'
         nsx-id: "10218"
     creationTimestamp: null
-    name: admin-policy-1
-    namespace: default
+    name: admin-policy-2
 spec:
     ingress:
         - action: Pass
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: group__Gryffindor
@@ -57,10 +95,12 @@ spec:
                 end: 65535
                 protocol: TCP
                 start: 1
-    priority: 2
+    priority: 3
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: group__Gryffindor
@@ -75,14 +115,15 @@ metadata:
         description: '(jump_to_application: (src: (group = Hufflepuff) dst: (group = Hufflepuff) conn: UDP dst-ports: 300-320)'
         nsx-id: "10219"
     creationTimestamp: null
-    name: admin-policy-2
-    namespace: default
+    name: admin-policy-3
 spec:
     ingress:
         - action: Pass
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: group__Hufflepuff
@@ -92,10 +133,12 @@ spec:
                 end: 320
                 protocol: UDP
                 start: 300
-    priority: 3
+    priority: 4
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: group__Hufflepuff
@@ -110,23 +153,26 @@ metadata:
         description: '(jump_to_application: (src: (group = Slytherin) dst: (group = Slytherin) conn: All Connections)'
         nsx-id: "10220"
     creationTimestamp: null
-    name: admin-policy-3
-    namespace: default
+    name: admin-policy-4
 spec:
     egress:
         - action: Pass
           ports: null
           to:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: group__Slytherin
                           operator: Exists
-    priority: 4
+    priority: 5
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: group__Slytherin
@@ -141,23 +187,26 @@ metadata:
         description: '(jump_to_application: (src: (group = Slytherin) dst: (group = Slytherin) conn: All Connections)'
         nsx-id: "10220"
     creationTimestamp: null
-    name: admin-policy-4
-    namespace: default
+    name: admin-policy-5
 spec:
     ingress:
         - action: Pass
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: group__Slytherin
                           operator: Exists
           ports: null
-    priority: 5
+    priority: 6
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: group__Slytherin
@@ -172,23 +221,26 @@ metadata:
         description: '(jump_to_application: (src: (group = Dumbledore) dst: (group = Gryffindor) conn: All Connections)'
         nsx-id: "10221"
     creationTimestamp: null
-    name: admin-policy-5
-    namespace: default
+    name: admin-policy-6
 spec:
     egress:
         - action: Pass
           ports: null
           to:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: group__Gryffindor
                           operator: Exists
-    priority: 6
+    priority: 7
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: group__Dumbledore
@@ -203,23 +255,26 @@ metadata:
         description: '(jump_to_application: (src: (group = Dumbledore) dst: (group = Gryffindor) conn: All Connections)'
         nsx-id: "10221"
     creationTimestamp: null
-    name: admin-policy-6
-    namespace: default
+    name: admin-policy-7
 spec:
     ingress:
         - action: Pass
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector:
                     matchExpressions:
                         - key: group__Dumbledore
                           operator: Exists
           ports: null
-    priority: 7
+    priority: 8
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector:
                 matchExpressions:
                     - key: group__Gryffindor
@@ -234,20 +289,23 @@ metadata:
         description: '(deny: (src: (*) dst: (*) conn: All Connections)'
         nsx-id: "10300"
     creationTimestamp: null
-    name: admin-policy-7
-    namespace: default
+    name: admin-policy-8
 spec:
     egress:
         - action: Deny
           ports: null
           to:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector: {}
-    priority: 8
+    priority: 9
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector: {}
 status:
     conditions: null
@@ -259,20 +317,23 @@ metadata:
         description: '(deny: (src: (*) dst: (*) conn: All Connections)'
         nsx-id: "10300"
     creationTimestamp: null
-    name: admin-policy-8
-    namespace: default
+    name: admin-policy-9
 spec:
     ingress:
         - action: Deny
           from:
             - pods:
-                namespaceSelector: {}
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
                 podSelector: {}
           ports: null
-    priority: 9
+    priority: 10
     subject:
         pods:
-            namespaceSelector: {}
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
             podSelector: {}
 status:
     conditions: null
