--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimpler_NoHint/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimpler_NoHint/policies.yaml
@@ -2,10 +2,33 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: Network Policy To Allow Access To DNS Server
+        nsx-id: none
+    creationTimestamp: null
+    name: dns-policy
+    namespace: default
+spec:
+    egress:
+        - ports:
+            - port: 53
+              protocol: UDP
+          to:
+            - namespaceSelector: {}
+              podSelector:
+                matchLabels:
+                    k8s-app: kube-dns
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: TCP'
         nsx-id: "9195"
     creationTimestamp: null
-    name: policy-0
+    name: policy-1
     namespace: default
 spec:
     egress:
@@ -32,7 +55,7 @@ metadata:
         description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: TCP'
         nsx-id: "9195"
     creationTimestamp: null
-    name: policy-1
+    name: policy-2
     namespace: default
 spec:
     egress:
@@ -59,7 +82,7 @@ metadata:
         description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: TCP'
         nsx-id: "9195"
     creationTimestamp: null
-    name: policy-2
+    name: policy-3
     namespace: default
 spec:
     ingress:
@@ -86,7 +109,7 @@ metadata:
         description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: TCP'
         nsx-id: "9195"
     creationTimestamp: null
-    name: policy-3
+    name: policy-4
     namespace: default
 spec:
     ingress:
@@ -113,7 +136,7 @@ metadata:
         description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: UDP'
         nsx-id: "9196"
     creationTimestamp: null
-    name: policy-4
+    name: policy-5
     namespace: default
 spec:
     egress:
@@ -142,7 +165,7 @@ metadata:
         description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: UDP'
         nsx-id: "9196"
     creationTimestamp: null
-    name: policy-5
+    name: policy-6
     namespace: default
 spec:
     ingress:
@@ -163,29 +186,6 @@ spec:
               operator: Exists
     policyTypes:
         - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: Network Policy To Allow Access To DNS Server
-        nsx-id: dns-rule-id
-    creationTimestamp: null
-    name: dns-policy
-    namespace: default
-spec:
-    egress:
-        - ports:
-            - port: 53
-              protocol: UDP
-          to:
-            - namespaceSelector: {}
-              podSelector:
-                matchLabels:
-                    k8s-app: kube-dns
-    podSelector: {}
-    policyTypes:
-        - Egress
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
