operator output as configmaps
Signed-off-by: adisos <adisos@il.ibm.com>

--- a/operator/Dockerfile
+++ b/operator/Dockerfile
@@ -18,6 +18,7 @@ COPY operator/cmd/main.go operator/cmd/main.go
 COPY operator/api/ operator/api/
 COPY operator/internal/controller/ operator/internal/controller/
 COPY pkg/ pkg/
+COPY internal/ internal/
 
 # Build
 # the GOARCH has not a default value to allow the binary be built according to the host where the command
