update golangci.yml: The linter 'tenv' is deprecated; Replaced by usetesting
Signed-off-by: adisos <adisos@il.ibm.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -108,13 +108,13 @@ linters:
     - staticcheck
     - stylecheck
     - tagliatelle
-    - tenv
     - testableexamples
     - typecheck
     - unconvert
     - unparam
     - unused
     - usestdlibvars
+    - usetesting
     - whitespace
  
 issues:
